# Text2SQL

./: .env.example  DYNAMIC_SCHEMA_README.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_PGVECTOR.md  docker-compose.yml  pyproject.toml  streamlit_app.py
Evals/: benchmark.json  golden_dataset.json
scripts/: validate_pgvector_setup.py
src/authorization/: User_wise_permission_declaration.txt  metadata_filter.py  permission_service.py  schema.zed  seed_relationships.py  spicedb_client.py
src/db/: executor.py  migrate_sqlite.py  validator.py
src/metadata/: embedding_manager.py  migrate_pgvector.py  schema_extractor.py  vector_retriever.py
src/planner/: metadata_loader.py  models.py  planner.py  prompts.py
